  error messages are now coalesced properly.



Only in the developers' release
-------------------------------

* Provisional instantiation of Proof General for
  Plastic (http://www.dur.ac.uk/CARG/plastic.html)
  by Paul Callaghan <P.C.Callaghan@durham.ac.uk>.


Internal changes for developers to note
---------------------------------------

* Many robustness improvements so that Proof General fails
  gracefully when certain configuration settings are unset.
  The aim is to make it easier to adapt to new proof
  assistants.

* proof-shell-leave-annotations-in-output variable has been added.
  This allows quick and dirty mark up of output from the proof
  assistant using special characters with codes above 128 and
  font-lock.  Such characters are hidden from display in the
  output buffers.  
  However, it is NOT recommended to use this mechanism, because
  it breaks the usability of cut and paste (which copies the
  special characters).  Furthermore the entire mechanism of
  using special character codes is fragile and needs replacing
  in future versions of Proof General!

* Proofs which are "unfinished", i.e. have no qed or result,
  are now closed off automatically when a new goal is begun.
  The new code only applies if proof-nested-goals-allowed is
  nil (the default).  Setting this variable to t forces 
  identical behaviour to before.  The default for Coq is t.

* Renamed some configuration variables for uniformity:
    proof-ctxt-string -> proof-context-command
    proof-help-string -> proof-info-command
    proof-prf-string  -> proof-showproof-command

* Speed optimizations for the proof-shell-filter, to attempt
  to give more CPU to a hungry and noisy proof process.
  To help with this there is a new configuration variable 
  proof-shell-eager-annotation-start-length.

* proof-site now does nothing if it has already been loaded.
  Previously it would load again, possibly altering settings.

* Many code cleanups and improvements.
